# booking_scraper

./: .gitignore  README.md  add_secrets_to_config.py  config.json  data_store.json  pyproject.toml
.github/workflows/: scrape.yaml
booking_scraper/: __init__.py  cli.py  scraper.py
booking_scraper/notifications/: __init__.py  pushover.py
tests/: test_run.py
